<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_principal"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A000000"></LinearLayout>


        <TextView
            android:id="@+id/pesotexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/pesotexto"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/estatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/estatura"
        android:inputType="number|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/estaturatexto"
        app:layout_constraintTop_toBottomOf="@+id/estaturatexto" />

    <TextView
        android:id="@+id/estaturatexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/estaturatext"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/peso"
        app:layout_constraintTop_toBottomOf="@+id/peso" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="number|numberDecimal"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pesotexto"
        app:layout_constraintTop_toBottomOf="@+id/pesotexto" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:text="@string/resultado"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/estatura"
        app:layout_constraintTop_toBottomOf="@+id/estatura" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="imc"
        android:text="@string/calcularimc"
        android:background="@drawable/boton_estilo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/resultado"
        app:layout_constraintTop_toBottomOf="@+id/resultado"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/atras"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:background="@drawable/atras"
        android:backgroundTint="@color/white"
        android:onClick="atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>