<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A000000">

    </LinearLayout>
    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num1_text"
        app:layout_constraintTop_toBottomOf="@+id/num1_text" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num2_text"
        app:layout_constraintTop_toBottomOf="@+id/num2_text" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <TextView
        android:id="@+id/num1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/num1_texto"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/num2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/num2_texto"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <TextView
        android:id="@+id/resultado_calculadora_spinner"
        android:layout_width="191dp"
        android:layout_height="124dp"
        android:text="@string/resultado_calculadora_spinner"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcular_spinner" />

    <Button
        android:id="@+id/calcular_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton_estilo"
        android:onClick="calculadora_spinner"
        android:text="@string/calcular_spinner"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
     <Button
        android:id="@+id/atras"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/atras"
        android:onClick="atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />



</androidx.constraintlayout.widget.ConstraintLayout>