<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pantalla_principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="#6A000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/atras"
                android:layout_width="48dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/atras"
                android:backgroundTint="@color/white"
                android:onClick="atras"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/urlEditText"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:onClick="Navegar">

            </WebView>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/loadButton"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_estilo"
                    android:onClick="hola"
                    android:text="@string/loadButton"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/BotonCerrar"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_estilo"
                    android:onClick="cerrar"
                    android:text="@string/BotonCerrar"
                    android:textColor="@color/white" />
            </TableRow>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>